# towmagkit

./: LICENSE  README.md  pyproject.toml
gmt_scripts/: 001-x2sys-gmt6.sh  002-surface.sh  003-mag_map.sh  geomag.fmt
paper/: paper.bib  paper.md
scripts/: run-crossover.py  run-raw2corrected.py
src/ishihara-fortranwrappers/: compile.sh  lflc  lflc.f  llasplit  llasplit.f  llfind  llfind.f  llfinddble  llfinddble.f  llsd2lsd  llsd2lsd.f  llsdist  llsdist.f  lsdstat  lsdstat.f  lwt  lwt.f
src/ishiharautils/: __init__.py  ishiharahoupipeline.py  level_checker.py  lflcconvert.py  lla2trk.py  llaconverter.py  lsdconverter.py
src/towmagkit/: __init__.py  anmorg1min.py  cablecorr.py  cesiumraw2anmorg.py  dv_min2obsc.py  dvcorrection.py  igrfcorrection.py  protonraw2anmorg.py  trksplitter.py
src/towmagkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
