[project]
name = "towmagkit"
version = "0.1.0"
description = "A modular Python toolkit for processing marine towed magnetometer data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

keywords = ["magnetometer", "marine geophysics", "IGRF", "preprocessing", "navigation"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Earth Sciences",
  "Programming Language :: Python :: 3",
]

dependencies = [
    "geopy>=2.4.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "ppigrf>=2.1.0",
    "pygmt>=0.15.0",
    "rdp>=0.8",
    "rioxarray>=0.19.0",
    "ruff>=0.11.13",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xarray>=2025.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
